Create tables from command line and config file

--- a/database.cfg
+++ b/database.cfg
@@ -11,6 +11,11 @@ name: forge
 user: forge_user
 password: forge_password
 
+[Data]
+shapefiles: /var/local/cartoweb/tmp/3dpoc/MNT25Swizerland/MNT25_WGS84_100.shp
+tablenames: mnt25_simplified_100m
+modelnames: mnt25
+
 [Logging]
 config: logging.cfg
 logfile: logs/forge.log
