Fix log files names

--- a/database.cfg
+++ b/database.cfg
@@ -18,5 +18,5 @@ modelnames: mnt25
 
 [Logging]
 config: logging.cfg
-logfile: logs/forge.log
-sqlLogfile: logs/sql.log
+logfile: logs/forge_%(timestamp)s.log
+sqlLogfile: logs/sql_%(timestamp)s.log
