Support several shapefiles per table

--- a/database.cfg
+++ b/database.cfg
@@ -12,9 +12,10 @@ user: forge_user
 password: forge_password
 
 [Data]
-shapefiles: /var/local/cartoweb/tmp/3dpoc/MNT25Swizerland/MNT25_WGS84_100.shp
-tablenames: mnt25_simplified_100m
-modelnames: mnt25
+shapefiles: /var/local/cartoweb/tmp/3dpoc/MNT25Swizerland/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/64/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/32/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/16/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/8/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/4/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/2/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/1/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/0.5/,/var/local/cartoweb/tmp/3dpoc/interlaken_last/WGS84/0.25/
+tablenames: mnt25_simplified_100m,break_lines_64m,break_lines_32m,break_lines_16m,break_lines_8m,break_lines_4m,break_lines_2m,break_lines_1m,break_lines_0_5m,break_lines_0_25m
+modelnames: mnt25,bl_64m,bl_32m,bl_16m,bl_8m,bl_4m,bl_2m,bl_1m,bl_0_5m,bl_0_25m
+
 
 [Logging]
 config: logging.cfg
