--- a/tms.cfg
+++ b/tms.cfg
@@ -33,7 +33,7 @@ tablename: mnt25_simplified_100m
 tablename: mnt25_simplified_100m
 
 [16]
-tablename: mnt25_simplified_100m
+tablename: break_lines_1m
 
 [17]
-tablename: mnt25_simplified_100m
+tablename: break_lines_0_5m
