Change logging directory

--- a/database.cfg
+++ b/database.cfg
@@ -19,5 +19,5 @@ modelnames: mnt25,bl_64m,bl_32m,bl_16m,bl_8m,bl_4m,bl_2m,bl_1m,bl_0_5m,bl_0_25m
 
 [Logging]
 config: logging.cfg
-logfile: logs/forge_%(timestamp)s.log
-sqlLogfile: logs/sql_%(timestamp)s.log
+logfile: /var/log/tileforge/forge_%(timestamp)s.log
+sqlLogfile: /var/log/tileforge/sql_%(timestamp)s.log
