Clipping tests in tiler....

--- a/tms.cfg
+++ b/tms.cfg
@@ -1,27 +1,39 @@
 [General]
-multiProcessing: 1
+multiProcessing: 0
+
+[Tiles]
+minX: 17101
+maxX: 17102
+minY: 12443
+maxY: 12444
 
 [Extent]
-minLon: 5.74569
-maxLon: 10.60591
-minLat: 45.83312
-maxLat: 47.74443
+minLon: 7.877197265625
+maxLon: 7.899169921875
+minLat: 46.702880859375
+maxLat: 46.724853515625
 
 [Zooms]
-tileMinZ: 9
-tileMaxZ: 17
+tileMinZ: 14
+tileMaxZ: 14
+
+[mnt_ref]
+tablename: mnt25_simplified_100m
+
+[dtm_ref]
+tablename: break_lines_xm
 
 [9]
-tablename: mnt25_simplified_100m
+tablename: break_lines_64m
 
 [10]
-tablename: mnt25_simplified_100m
+tablename: break_lines_32m
 
 [11]
-tablename: mnt25_simplified_100m
+tablename: break_lines_16m
 
 [12]
-tablename: mnt25_simplified_100m
+tablename: break_lines_8m
 
 [13]
 tablename: mnt25_simplified_100m
@@ -33,7 +45,7 @@ tablename: mnt25_simplified_100m
 tablename: mnt25_simplified_100m
 
 [16]
-tablename: break_lines_1m
+tablename: break_lines_0_5m
 
 [17]
 tablename: break_lines_0_5m
