--- a/tms.cfg
+++ b/tms.cfg
@@ -6,6 +6,9 @@ minLon: 5.74569
 maxLon: 10.60591
 minLat: 45.83312
 maxLat: 47.74443
+# fullonly: 0 -> inludes all tiles that intersect, even partly, with extent
+# fullonly: 1 -> include only tiles that fully intersect with extent
+fullonly: 1
 
 [Zooms]
 tileMinZ: 9
@@ -37,3 +40,4 @@ tablename: break_lines_1m
 
 [17]
 tablename: break_lines_0_5m
+
