Deactivate sql logging for now

--- a/logging.cfg
+++ b/logging.cfg
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,forge,sqlalchemy
+keys=root,forge
 
 [handlers]
-keys=consoleHandler,fileHandler,sqlFileHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
 keys=simpleFormatter
@@ -17,11 +17,11 @@ handlers=consoleHandler,fileHandler
 qualname=forge
 propagate=0
 
-[logger_sqlalchemy]
-level=DEBUG
-handlers=sqlFileHandler
-qualname=sqlalchemy
-propagate=0
+#[logger_sqlalchemy]
+#level=DEBUG
+#handlers=sqlFileHandler
+#qualname=sqlalchemy
+#propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
@@ -35,11 +35,11 @@ level=DEBUG
 formatter=simpleFormatter
 args=('%(logfile)s',)
 
-[handler_sqlFileHandler]
-class=FileHandler
-level=DEBUG
-formatter=simpleFormatter
-args=('%(sqlLogfile)s',)
+#[handler_sqlFileHandler]
+#class=FileHandler
+#level=DEBUG
+#formatter=simpleFormatter
+#args=('%(sqlLogfile)s',)
 
 [formatter_simpleFormatter]
 format=%(asctime)s | %(name)-32s | %(levelname)-8s | %(message)s
