--- a/tms.cfg
+++ b/tms.cfg
@@ -1,5 +1,7 @@
 [General]
 multiProcessing: 1
+# multiProcessing: 0 -> no multiprocessing
+# multiProcessing: 1 -> multiprocessing based on the nb of processors
 
 [Extent]
 minLon: 5.74569
@@ -27,13 +29,13 @@ tablename: mnt25_simplified_100m
 tablename: mnt25_simplified_100m
 
 [13]
-tablename: mnt25_simplified_100m
+tablename: break_lines_8m
 
 [14]
-tablename: mnt25_simplified_100m
+tablename: break_lines_4m
 
 [15]
-tablename: mnt25_simplified_100m
+tablename: break_lines_2m
 
 [16]
 tablename: break_lines_1m
