change superuser, postgres is not allowed to connect from other hosts

--- a/database.cfg
+++ b/database.cfg
@@ -1,10 +1,10 @@
 [Server]
-host: localhost
+host: <<ip or localhost>>
 port: 5432
 
 [Admin]
-user: postgres
-password: postgres
+user: pgkogis
+password: <<getfromkeepass>>
 
 [Database]
 name: forge
