Current conf as created

--- a/tms.cfg
+++ b/tms.cfg
@@ -4,10 +4,10 @@ multiProcessing: 1
 # multiProcessing: 1 -> multiprocessing based on the nb of processors
 
 [Extent]
-minLon: 5.74569
-maxLon: 10.60591
-minLat: 45.83312
-maxLat: 47.74443
+minLon: 7.456
+maxLon: 8.287
+minLat: 46.668
+maxLat: 47.119
 # fullonly: 0 -> inludes all tiles that intersect, even partly, with extent
 # fullonly: 1 -> include only tiles that fully intersect with extent
 fullonly: 1
@@ -20,13 +20,13 @@ tileMaxZ: 17
 tablename: mnt25_simplified_100m
 
 [10]
-tablename: mnt25_simplified_100m
+tablename: break_lines_64m
 
 [11]
-tablename: mnt25_simplified_100m
+tablename: break_lines_32m
 
 [12]
-tablename: mnt25_simplified_100m
+tablename: break_lines_16m
 
 [13]
 tablename: break_lines_8m
