--- a/tms.cfg
+++ b/tms.cfg
@@ -14,7 +14,7 @@ fullonly: 1
 
 [Zooms]
 tileMinZ: 9
-tileMaxZ: 17
+tileMaxZ: 18
 
 [9]
 tablename: mnt25_simplified_100m
@@ -43,3 +43,5 @@ tablename: break_lines_1m
 [17]
 tablename: break_lines_0_5m
 
+[18]
+tablename: break_lines_0_25m
