Use pseuod lazy appraoch for multiprocessing

--- a/tms.cfg
+++ b/tms.cfg
@@ -1,7 +1,9 @@
 [General]
-multiProcessing: 1
 # multiProcessing: 0 -> no multiprocessing
 # multiProcessing: 1 -> multiprocessing based on the nb of processors
+multiProcessing: 1
+# number of chunks to pass to processing pool
+chunks: 2500
 
 [Extent]
 minLon: 7.456
@@ -13,7 +15,7 @@ maxLat: 47.119
 fullonly: 1
 
 [Zooms]
-tileMinZ: 9
+tileMinZ: 18
 tileMaxZ: 18
 
 [9]
