Fully qulified path for our terrain tiles

--- a/tms.cfg
+++ b/tms.cfg
@@ -4,6 +4,8 @@
 multiProcessing: 1
 # number of chunks to pass to processing pool
 chunks: 2500
+# terrain files base path
+bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20151231/4326/
 
 [Extent]
 minLon: 7.456
@@ -15,8 +17,8 @@ maxLat: 47.119
 fullonly: 1
 
 [Zooms]
-tileMinZ: 18
-tileMaxZ: 18
+tileMinZ: 9
+tileMaxZ: 9
 
 [9]
 tablename: mnt25_simplified_100m
