Adapt to gal comments

--- a/tms.cfg
+++ b/tms.cfg
@@ -2,7 +2,7 @@
 # terrain files base path
 bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20151231/4326/
 # chunks per process (that's a maximum)
-chunks: 50
+maxChunks: 50
 
 [Extent]
 minLon: 7.456
