--- a/logging.cfg
+++ b/logging.cfg
@@ -44,3 +44,7 @@ args=('%(logfile)s',)
 [formatter_simpleFormatter]
 format=%(asctime)s | %(name)-32s | %(levelname)-8s | %(message)s
 datefmt=
+
+[Logging]
+logfile: /var/log/tileforge/forge_%(timestamp)s.log
+sqlLogfile: /var/log/tileforge/sql_%(timestamp)s.log
