--- a/logging.cfg
+++ b/logging.cfg
@@ -46,5 +46,5 @@ format=%(asctime)s | %(name)-32s | %(levelname)-8s | %(message)s
 datefmt=
 
 [Logging]
-logfile: /var/log/tileforge/forge_%(timestamp)s.log
-sqlLogfile: /var/log/tileforge/sql_%(timestamp)s.log
+logfile: /geodata/log/forge_%(timestamp)s.log
+sqlLogfile: /geodata/log/sql_%(timestamp)s.log
