Fix wander config

--- a/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
+++ b/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
@@ -1,17 +1,19 @@
 [Database]
-dbName: stopo_dev
+dbName: stopo_int
 dbSchema: karto
 tableName: wanderwege_swissmap
 
 [Grid]
-bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-wanderwege/default/20150101/
-sridFrom: 21781
-sridTo: 4326 
+bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-wanderwege/default/20150101/4326/
+# The initial extent srid as defined in the pyramid
+sridFrom: 4326
+# The srid of the table
+sridTo: 21781
 terrainBased: False
 pxTolerance: 0
 fullonly: 0
 bounds: 5.86725126512748,45.8026860136571,10.9209100671547,47.8661652478939
-minZoom: 7
+minZoom: 8
 maxZoom: 17
 maxScanZoom: 16
 
