--- a/configs/raster/ch_swisstopo_pixelkarte-farbe.cfg
+++ b/configs/raster/ch_swisstopo_pixelkarte-farbe.cfg
@@ -4,7 +4,7 @@
 
 [Grid]
 terrainBased: True
-bucketPath: 1.0.0/ch.swisstopo.swissimage-product/default/20151231/4326/
+bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-karte-farbe.3d/default/20150401/4326/
 bounds: 5.86725126512748,45.8026860136571,10.9209100671547,47.8661652478939
 minZoom: 7
 maxZoom: 17
@@ -12,8 +12,8 @@ maxScanZoom: 16
 fullonly: 0
 
 [Metadata]
-name: ch.swisstopo.swissimage-product
+name: ch.swisstopo.swisstlm3d-karte-farbe.3d
 format: jpeg
-description: Swissimage orthophotos
+description: TLM 3D colors
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts9.geo.admin.ch/,//wmts10.geo.admin.ch/,//wmts11.geo.admin.ch/,//wmts12.geo.admin.ch/,//wmts13.geo.admin.ch/,//wmts14.geo.admin.ch/
