Add and fix configs

--- a/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
+++ b/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
@@ -3,9 +3,8 @@
 # is created thanks to the terrain config
 
 [Grid]
-# To use only with pregenerated tiles
 terrainBased: True
-bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-karte-farbe.3d/default/20150401/4326/
+bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-karte-grau.3d/default/20150401/4326/
 bounds: 5.86725126512748,45.8026860136571,10.9209100671547,47.8661652478939
 minZoom: 7
 maxZoom: 17
@@ -13,8 +12,8 @@ maxScanZoom: 16
 fullonly: 0
 
 [Metadata]
-name: ch.swisstopo.swisstlm3d-karte-farbe.3d
+name: ch.swisstopo.swisstlm3d-karte-grau.3d
 format: jpeg
-description: TLM 3D colors
+description: TLM 3D grau
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts5.geo.admin.ch/,//wmts6.geo.admin.ch/,//wmts7.geo.admin.ch/,//wmts8.geo.admin.ch/,//wmts9.geo.admin.ch/
