Add gridOrigin parameter

--- a/configs/raster/ch_swisstopo_swissimage-product.cfg
+++ b/configs/raster/ch_swisstopo_swissimage-product.cfg
@@ -4,6 +4,7 @@
 
 [Grid]
 # Only for pregenerated tiles
+gridOrigin: topLeft
 terrainBased: True
 bucketPath: 1.0.0/ch.swisstopo.swissimage-product/default/20151231/4326/
 bounds: 5.86725126512748,45.8026860136571,10.9209100671547,47.8661652478939
