--- a/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
+++ b/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
@@ -3,6 +3,7 @@
 # is created thanks to the terrain config
 
 [Grid]
+gridOrigin: topLeft
 terrainBased: True
 bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-karte-grau.3d/default/20150401/4326/
 bounds: 5.86725126512748,45.8026860136571,10.9209100671547,47.8661652478939
