Add tile urls and consider gridOrigin parameter

--- a/configs/raster/ch_swisstopo_pixelkarte-farbe.cfg
+++ b/configs/raster/ch_swisstopo_pixelkarte-farbe.cfg
@@ -16,6 +16,7 @@ fullonly: 0
 [Metadata]
 name: ch.swisstopo.swisstlm3d-karte-farbe.3d
 format: jpeg
+tileTemplate: {z}/{y}/{x}
 description: TLM 3D colors
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts5.geo.admin.ch/,//wmts6.geo.admin.ch/,//wmts7.geo.admin.ch/,//wmts8.geo.admin.ch/,//wmts9.geo.admin.ch/
