--- a/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
+++ b/configs/raster/ch_swisstopo_pixelkarte-grau.cfg
@@ -15,6 +15,7 @@ fullonly: 0
 [Metadata]
 name: ch.swisstopo.swisstlm3d-karte-grau.3d
 format: jpeg
+tileTemplate: {z}/{y}/{x}
 description: TLM 3D grau
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts5.geo.admin.ch/,//wmts6.geo.admin.ch/,//wmts7.geo.admin.ch/,//wmts8.geo.admin.ch/,//wmts9.geo.admin.ch/
