--- a/configs/raster/ch_swisstopo_swissimage-product.cfg
+++ b/configs/raster/ch_swisstopo_swissimage-product.cfg
@@ -16,6 +16,7 @@ fullonly: 0
 [Metadata]
 name: ch.swisstopo.swissimage-product
 format: jpeg
+tileTemplate: {z}/{y}/{x}
 description: Swissimage orthophotos
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts9.geo.admin.ch/,//wmts10.geo.admin.ch/,//wmts11.geo.admin.ch/,//wmts12.geo.admin.ch/,//wmts13.geo.admin.ch/,//wmts14.geo.admin.ch/
