--- a/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
+++ b/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
@@ -21,6 +21,7 @@ maxScanZoom: 16
 [Metadata]
 name: ch.swisstopo.swisstlm3d-wanderwege
 format: png
+tileTemplate: {z}/{x}/{y}
 description: Hikes in Switzerland
 attribution: <a target="new" href="http://www.swisstopo.admin.ch/internet/swisstopo/fr/home.html">swisstopo</a>
 tilesURLs: //wmts9.geo.admin.ch/,//wmts10.geo.admin.ch/,//wmts11.geo.admin.ch/,//wmts12.geo.admin.ch/,//wmts13.geo.admin.ch/,//wmts14.geo.admin.ch/
