--- a/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
+++ b/configs/raster/ch_swisstopo_swisstlm3d-wanderwege.cfg
@@ -4,7 +4,7 @@ dbSchema: karto
 tableName: wanderwege_swissmap
 
 [Grid]
-gridOrigin: bottomLeft
+gridOrigin: topLeft
 terrainBased: False
 bucketPath: 1.0.0/ch.swisstopo.swisstlm3d-wanderwege/default/20150101/4326/
 # The initial extent srid as defined in the pyramid
