--- a/configs/terrain/database.cfg
+++ b/configs/terrain/database.cfg
@@ -1,22 +1,26 @@
 [Server]
-host: ${dbhost}
+host: localhost
 port: 5432
 
 [Admin]
 user: pgkogis
-password: ${pgpass}
+password: pgkogis_borudel
 
 [Database]
-name: forge_main
+#name: forge_toby
+#name: forge_toby2
+name: forge_toby_up
 user: tileforge
 password: tileforge
 
 [Data]
 # Input shapefiles
-baseDir: /var/local/efs-dev/geodata/bund/swisstopo/tlm/3ddata/20190902-terrain-test/
-shapefiles: 8/,2/,1/,0.5/
-tablenames: bl_2018_8m,bl_2018_2m,bl_2018_1m,bl_2018_0_5m
-modelnames: bl_2018_8m,bl_2018_2m,bl_2018_1m,bl_2018_0_5m
+baseDir: /var/local/efs-dev/geodata/bund/swisstopo/tlm/3ddata/20190902-terrain-test
+#baseDir: /var/local/efs-dev/geodata/bund/swisstopo/tlm/3ddata/20200115-terrain-test-2
+#baseDir: /var/local/efs-dev/geodata/bund/swisstopo/tlm/3ddata/20200116-terrain-test-5
+shapefiles: /
+tablenames: test
+modelnames: test
 lakes: /home/geodata/lakes/lakes.shp
 
 # Paths must be absolute!
