[WIP] first iteration, ready for testdata (#174)
* first iteration, ready for testdata

* added takeoff document

* docu

* testing

* helper view

* testing sqs

* removed har

* doc

* moved images

* images

* formating

* help to analyse a corrupt tile

--- a/configs/terrain/tms.cfg
+++ b/configs/terrain/tms.cfg
@@ -1,14 +1,18 @@
 [General]
 # 3d bucket
-bucketName: ${bucketname}
+bucketName: 3dtiles-dev
 # user specific
-profileName: ${profilename}
+profileName: not_used
 # terrain files base path
-bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20190902/4326/
+#bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20190902/4326/
+#bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20200115/4326/
+#bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/20200121/4326/
+#bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/no.null/4326/
+bucketpath: 1.0.0/ch.swisstopo.terrain.3d/default/sqs/4326/
 # chunks per process (that's a maximum)
 maxChunks: 50
 # when using aws sqs queue, the name of the queue
-sqsqueue: terrain_20150924
+sqsqueue: terrain_20200115
 # proc factor (total processes = factor * num_cpus_on_machine)
 procfactor: 1
 
@@ -41,39 +45,65 @@ lighting: 0
 
 [Zooms]
 # Zoom level to tile
-tileMinZ: 14
-tileMaxZ: 17
+#tileMinZ: 0
+#tileMaxZ: 15
+tileMinZ: 0
+tileMaxZ: 12
+
+[0]
+tablename: test
+
+[1]
+tablename: test
+
+[2]
+tablename: test
+
+[3]
+tablename: test
+
+[4]
+tablename: test
+
+[5]
+tablename: test
+
+[6]
+tablename: test
+
+[7]
+tablename: test
 
 [8]
 # Should be replaced with dhm25_256
-tablename: dhm25_256m
+tablename: test
 
 [9]
-tablename: dhm25_128m
+tablename: test
 
 [10]
-tablename: dhm25_64m
+tablename: test
 
 [11]
-tablename: dhm25_64m
+tablename: test
 
 [12]
-tablename: dhm25_32m
+tablename: test
 
 [13]
-tablename: bl_32m
+tablename: test
 
 [14]
-tablename: bl_2018_8m
+tablename: test
 
 [15]
-tablename: bl_2018_2m
+tablename: test
 
 [16]
-tablename: bl_2018_1m
+tablename: test
 
 [17]
-tablename: bl_2018_0_5m
+tablename: test
 
 [18]
-tablename: bl_0_5m
+tablename: test
