python2: fix library versions

--- a/configs/terrain/database.cfg
+++ b/configs/terrain/database.cfg
@@ -9,7 +9,7 @@ password: pgkogis_borudel
 [Database]
 #name: forge_toby
 #name: forge_toby2
-name: forge_toby_up
+name: forge_main
 user: tileforge
 password: tileforge
 
